init(frontend): post creation page

--- a/frontend/src/app/pages/home/template.html
+++ b/frontend/src/app/pages/home/template.html
@@ -1,4 +1,4 @@
-<button matFab extended>
+<button matFab extended (click)="router.navigateByUrl('/posts/edit')">
   <mat-icon>edit</mat-icon>
-  Write new blog
+  new post
 </button>
