--- a/frontend/src/app/pages/posts/edit/post-edit.html
+++ b/frontend/src/app/pages/posts/edit/post-edit.html
@@ -22,9 +22,18 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>send</mat-icon>
-        <span>Publish</span>
+      <button mat-menu-item (click)="postData().isPublic = !postData().isPublic; save()">
+        @if (postData().isPublic) {
+          <ng-container>
+            <mat-icon>lock</mat-icon>
+            <span>Hide</span>
+          </ng-container>
+        } @else {
+          <ng-container>
+            <mat-icon>send</mat-icon>
+            <span>Publish</span>
+          </ng-container>
+        }
       </button>
       <button mat-menu-item (click)="delete()">
         <mat-icon color="red">delete</mat-icon>
