feat(full-stack): implement media upload

--- a/frontend/src/app/pages/user-posts/edit/post-edit.html
+++ b/frontend/src/app/pages/user-posts/edit/post-edit.html
@@ -22,6 +22,10 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="attachments()">
+        <mat-icon color="red">attach_file_add</mat-icon>
+        <span>Attachments</span>
+      </button>
       <button mat-menu-item (click)="postData().isPublic = !postData().isPublic; save()">
         @if (postData().isPublic) {
           <ng-container>
