feat: implement likes

--- a/frontend/src/app/components/post-card/post-card.css
+++ b/frontend/src/app/components/post-card/post-card.css
@@ -21,3 +21,15 @@
 .header {
   margin-bottom: 20px;
 }
+
+mat-card-actions {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
+  .likes {
+    display: flex;
+    gap: 10px;
+  }
+}
