--- a/frontend/src/app/components/post-view/post-view.html
+++ b/frontend/src/app/components/post-view/post-view.html
@@ -1,3 +1,18 @@
+<header class="mat-typography">
+  <button matButton>
+    <mat-icon>person</mat-icon>
+    {{ postData().accountName }}
+  </button>
+  {{ postData().createdAt.toDateString() }}
+</header>
+
+<div class="sideBar">
+  <button matButton (click)="like()">
+    <mat-icon>handshake</mat-icon>
+    {{ postData().likesCount }}
+  </button>
+</div>
+
 <div class="mat-typography">
   <h1>{{ postData().title }}</h1>
   <markdown
