--- a/frontend/src/app/pages/post/post.page.html
+++ b/frontend/src/app/pages/post/post.page.html
@@ -5,7 +5,7 @@
   Comments
 </mat-toolbar>
 
-<div class="comments mat-typography">
+<div id="comments" class="mat-typography">
   <mat-card appearance="outlined">
     <mat-card-header>
       <div mat-card-avatar class="icon">
