--- a/frontend/src/app/components/post-view/post-view.css
+++ b/frontend/src/app/components/post-view/post-view.css
@@ -1,8 +1,9 @@
 .sideBar {
   position: fixed;
-  padding: 10px;
   left: 0;
   top: 0;
+  z-index: 1;
+  border-radius: 12px;
 }
 header {
   display: flex;
