refactor(post view): add UserModel as owner in PostExtra and adjust post related components. - split post view component into header, content and footer - use post view in post page and post card - include first and last name in post header

--- a/frontend/src/app/components/post-view/post-view.css
+++ b/frontend/src/app/components/post-view/post-view.css
@@ -1,16 +1,9 @@
-.sideBar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  border-radius: 12px;
-}
-header {
-  display: flex;
-  align-items: center;
+post-content {
+  max-height: 40vh;
+  overflow: hidden;
+  min-width: 30vw;
 }
 
-::ng-deep post-view {
-  display: block;
-  margin-left: 20px;
+post-footer {
+  margin-top: auto;
 }
