--- a/frontend/src/app/pages/post/post.page.css
+++ b/frontend/src/app/pages/post/post.page.css
@@ -1,22 +1,3 @@
-textarea {
-  resize: none;
-  width: 100%;
-  outline: none;
-  border: none;
-  padding: 10px;
-  background: none;
-}
-
-#comments {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 10px;
-}
-
-.writeComment {
-  display: flex;
-}
-.comment-card button {
-  margin-left: auto;
+:host ::ng-deep .readMore {
+  display: none;
 }
