--- a/frontend/src/app/pages/post/post.page.html
+++ b/frontend/src/app/pages/post/post.page.html
@@ -1,70 +1,8 @@
-<post-view [postData]="postData()" />
-
+<post-view isNew="false" [data]="postData()" [visibility]="postData().visibility"></post-view>
 <mat-toolbar>
-  <!-- <mat-icon>comments</mat-icon> -->
+  <mat-icon>comments</mat-icon>
   Comments
 </mat-toolbar>
-
-<div id="comments" class="mat-typography">
-  <mat-card appearance="outlined">
-    <mat-card-header>
-      <div mat-card-avatar class="icon">
-        <mat-icon>person</mat-icon>
-      </div>
-      <mat-card-subtitle>{{ user.firstName }} {{ user.lastName }}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content class="writeComment">
-      <textarea #text class="mat-typography" placeholder="Write a comment"></textarea>
-      <button mat-icon-button (click)="sendComment(text.value); text.value = ''">
-        <mat-icon>send</mat-icon>
-      </button>
-    </mat-card-content>
-  </mat-card>
-
-  @for (comment of comments(); track $index) {
-    <mat-card class="comment-card" appearance="outlined">
-      <mat-card-header>
-        <div mat-card-avatar class="icon">
-          <mat-icon>person</mat-icon>
-        </div>
-        <mat-card-subtitle>
-          {{ comment.user.firstName }} {{ comment.user.lastName }}
-        </mat-card-subtitle>
-
-        @if (comment.user.accountId === user.accountId && comment.comment.id !== editingId()) {
-          <button matIconButton [matMenuTriggerFor]="menu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-        }
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="editingId.set(comment.comment.id)">
-            <mat-icon color="red">edit</mat-icon>
-            <span>Edit</span>
-          </button>
-          <button mat-menu-item (click)="deleteComment(comment.comment.id)">
-            <mat-icon color="red">delete</mat-icon>
-            <span>Delete</span>
-          </button>
-        </mat-menu>
-      </mat-card-header>
-      <mat-card-content class="writeComment">
-        @if (editingId() === comment.comment.id) {
-          <textarea
-            #text
-            class="mat-typography"
-            placeholder="Write a comment"
-            [value]="comment.comment.content"
-          ></textarea>
-          <button
-            mat-icon-button
-            (click)="editComment(comment.comment.id, text.value); text.value = ''"
-          >
-            <mat-icon>send</mat-icon>
-          </button>
-        } @else {
-          {{ comment.comment.content }}
-        }
-      </mat-card-content>
-    </mat-card>
-  }
-</div>
+@if (postData().id) {
+  <comments-list [postId]="postData().id" (commentsUpdate)="commentsUpdate($event)" />
+}
