feat(frontend): add comments bottom sheet in post cards

--- a/frontend/src/app/components/post-view/footer/footer.html
+++ b/frontend/src/app/components/post-view/footer/footer.html
@@ -4,7 +4,7 @@
       <mat-icon>handshake</mat-icon>
       {{ likesCount() }}
     </button>
-    <button matButton="outlined">
+    <button matButton="outlined" (click)="comment.emit()">
       <mat-icon>mode_comment</mat-icon>
       {{ commentsCount() }}
     </button>
