remove comments update event

--- a/frontend/src/app/components/comments-sheet/comments-sheet.html
+++ b/frontend/src/app/components/comments-sheet/comments-sheet.html
@@ -1,3 +1,4 @@
 <mat-nav-list>
-  <comments-list [postId]="data.postId" (commentsUpdate)="data.onCommentsUpdate($event)" />
+  Comments ({{ data.commentsCount }})
+  <comments-list postId="{{ data.postId }}" />
 </mat-nav-list>
