--- a/frontend/src/app/components/post-view/footer/footer.html
+++ b/frontend/src/app/components/post-view/footer/footer.html
@@ -9,5 +9,5 @@
       {{ commentsCount() }}
     </button>
   </div>
-  <button class="readMore" matButton (click)="readMore.emit()">read more</button>
+  <button class="readMore" matButton (click)="readMore()">read more</button>
 </mat-card-actions>
