feat: add profile page

--- a/frontend/src/app/components/comments-list/comments-list.css
+++ b/frontend/src/app/components/comments-list/comments-list.css
@@ -17,6 +17,8 @@ textarea {
 .writeComment {
   align-items: flex-start;
   display: flex;
+  white-space: wrap;
+  word-break: break-all;
 }
 .comment-card button {
   margin-left: auto;
