--- a/frontend/src/app/components/post-card/post-card.html
+++ b/frontend/src/app/components/post-card/post-card.html
@@ -1,3 +1,3 @@
 <mat-card>
-  <post-view [isNew]="isNew()" [data]="data()" (comment)="openCommentsSheet()" />
+  <post-view [data]="data()" (comment)="openCommentsSheet()" />
 </mat-card>
