cleanup(frontend): remove unnecessary input 'isNew'

--- a/frontend/src/app/pages/post/post.page.html
+++ b/frontend/src/app/pages/post/post.page.html
@@ -1,4 +1,4 @@
-<post-view isNew="false" [data]="postData()" />
+<post-view [data]="postData()" />
 <mat-toolbar> Comments ({{ postData().commentsCount }}) </mat-toolbar>
 @if (postData().id) {
   <comments-list [postId]="postData().id" />
