--- a/frontend/src/app/components/post-card/post-card.html
+++ b/frontend/src/app/components/post-card/post-card.html
@@ -1,3 +1,3 @@
-<mat-card>
+<mat-card [attr.owned]="data().owner.accountId === selfUser.accountId">
   <post-view [data]="data()" (comment)="openCommentsSheet()" />
 </mat-card>
