--- a/frontend/src/app/pages/user-posts/user-posts.html
+++ b/frontend/src/app/pages/user-posts/user-posts.html
@@ -1,11 +1,8 @@
 <div class="posts">
-  @for (post of localUnsavedDrafts; track $index) {
+  @for (post of syncedPosts(); track $index) {
     <post-card [data]="post" />
   }
-  @for (draft of localDrafts; track $index) {
-    <post-card [data]="draft" />
-  }
-  @for (post of savedPosts; track $index) {
-    <post-card [data]="post" />
+  @for (post of draftposts(); track $index) {
+    <post-card class="draft" [data]="post" />
   }
 </div>
