--- a/frontend/src/app/pages/user/user-page.css
+++ b/frontend/src/app/pages/user/user-page.css
@@ -1,3 +1,13 @@
 :host ::ng-deep user-header .avatar {
   cursor: initial;
 }
+
+:host ::ng-deep post-card .follow {
+  visibility: hidden;
+}
+
+.states {
+  padding: 20px;
+  display: flex;
+  gap: 20px;
+}
