--- a/frontend/src/app/components/post-view/post-view.css
+++ b/frontend/src/app/components/post-view/post-view.css
@@ -1,10 +1,3 @@
-post-content {
-  max-height: 40vh;
-  overflow: hidden;
-  min-width: 30vw;
-}
-
 user-header {
-  margin-right: auto;
-  padding: 12px;
+  max-width: var(--user-header-max-width);
 }
