--- a/frontend/src/app/components/user-header/header.css
+++ b/frontend/src/app/components/user-header/header.css
@@ -1,22 +1,20 @@
 :host {
   display: flex;
   align-items: center;
-  width: 100%;
+  padding: 12px;
 }
 
 mat-card-header {
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
   gap: 10px;
+  width: 100%;
 }
+
 .avatar mat-icon {
   width: 40px;
   height: auto;
   font-size: 40px;
 }
 
-.menu,
 .follow {
   margin-left: auto;
 }
