--- a/frontend/src/app/pages/post/post.page.css
+++ b/frontend/src/app/pages/post/post.page.css
@@ -20,15 +20,6 @@ textarea {
   margin: 10px;
 }
 
-:host ::ng-deep user-header {
-  margin: auto;
-  max-width: 600px;
-}
-
-:host ::ng-deep user-header mat-card-header {
-  /* position: sticky;
-  top: 10px;
-  background: #000;
-  border-radius: 12px;
-  z-index: 2; */
+post-view {
+  --user-header-max-width: fit-content;
 }
