--- a/frontend/src/app/pages/user/user-page.html
+++ b/frontend/src/app/pages/user/user-page.html
@@ -1,6 +1,5 @@
-<mat-card>
+<mat-card class="userInfo">
   <user-header [owner]="user()"> </user-header>
-  <mat-divider />
   <mat-card-content class="states">
     <div class="followers">
       {{ user().followersCount }}
