--- a/frontend/src/app/components/post-view/post-view.html
+++ b/frontend/src/app/components/post-view/post-view.html
@@ -1,4 +1,9 @@
-<user-header [owner]="data().owner" [createdAt]="data().createdAt" (edit)="edit()" />
+<user-header
+  [owner]="data().owner"
+  [createdAt]="data().createdAt"
+  (edit)="edit()"
+  (report)="report()"
+/>
 
 <post-content [title]="data().title" [content]="data().content" />
 
