--- a/frontend/src/app/components/user-header/header.html
+++ b/frontend/src/app/components/user-header/header.html
@@ -32,7 +32,7 @@
       <mat-icon>edit</mat-icon>
     </button>
   } @else {
-    <button mat-menu-item (click)="report()">
+    <button mat-menu-item (click)="report.emit()">
       <span>Report</span>
       <mat-icon>flag</mat-icon>
     </button>
