--- a/frontend/src/app/components/comments-list/comments-list.html
+++ b/frontend/src/app/components/comments-list/comments-list.html
@@ -1,48 +1,39 @@
-<mat-card appearance="outlined">
-  <mat-card-content class="writeComment">
-    <div mat-card-avatar>
-      <mat-icon>person</mat-icon>
-    </div>
-    <textarea #text placeholder="Write a comment"></textarea>
-    <button mat-icon-button (click)="sendComment(text.value); text.value = ''">
-      <mat-icon>send</mat-icon>
-    </button>
-  </mat-card-content>
-</mat-card>
-
+<mat-form-field appearance="outline">
+  <mat-icon matPrefix class="avatar">person</mat-icon>
+  <textarea cdkTextareaAutosize matInput #text placeholder="Write a comment"></textarea>
+  <button matSuffix matIconButton (click)="sendComment(text.value); text.value = ''">
+    <mat-icon>send</mat-icon>
+  </button>
+</mat-form-field>
 @for (comment of comments(); track $index) {
-  <mat-card class="comment-card" appearance="outlined">
-    <mat-card-header>
-      <div mat-card-avatar>
-        <mat-icon>person</mat-icon>
-      </div>
-      <mat-card-subtitle> @{{ comment.owner.login }} </mat-card-subtitle>
-
-      @if (comment.owner.accountId === user.accountId && comment.id !== editingId()) {
-        <button matIconButton [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
+  <mat-card>
+    <user-header
+      [owner]="comment.owner"
+      (edit)="editingId.set(comment.id)"
+      (report)="reportComment(comment.id)"
+    />
+    @if (editingId() === comment.id) {
+      <mat-card-content>
+        <mat-form-field appearance="outline">
+          <textarea
+            cdkTextareaAutosize
+            #text
+            matInput
+            placeholder="Write a comment"
+            [value]="comment.content"
+          ></textarea>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-footer>
+        <button matButton (click)="editingId.set('')">Cancel</button>
+        <button matButton="filled" (click)="editComment(comment.id, text.value); text.value = ''">
+          Save
         </button>
-      }
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="editingId.set(comment.id)">
-          <mat-icon color="red">edit</mat-icon>
-          <span>Edit</span>
-        </button>
-        <button mat-menu-item (click)="deleteComment(comment.id)">
-          <mat-icon color="red">delete</mat-icon>
-          <span>Delete</span>
-        </button>
-      </mat-menu>
-    </mat-card-header>
-    <mat-card-content class="writeComment">
-      @if (editingId() === comment.id) {
-        <textarea #text placeholder="Write a comment" [value]="comment.content"></textarea>
-        <button mat-icon-button (click)="editComment(comment.id, text.value); text.value = ''">
-          <mat-icon>send</mat-icon>
-        </button>
-      } @else {
+      </mat-card-footer>
+    } @else {
+      <mat-card-content>
         {{ comment.content }}
-      }
-    </mat-card-content>
+      </mat-card-content>
+    }
   </mat-card>
 }
