feat: implement role management

--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -11,6 +11,11 @@
     </button>
   </div>
 
+  <button matFab extended (click)="router.navigateByUrl('/admin')">
+    <mat-icon>admin_panel_settings</mat-icon>
+    Admin panel
+  </button>
+
   <div class="posts">
     @for (post of posts(); track $index) {
       <post-card [data]="post" />
