--- a/frontend/src/app/components/roles/roles-list/roles-list.html
+++ b/frontend/src/app/components/roles/roles-list/roles-list.html
@@ -14,13 +14,21 @@
         @if (editIdx() === role.id) {
           editing ({{ role.name }})
         } @else {
-          <role-view-header [role]="role" [panel]="panel" (edit)="editIdx.set($event)" />
+          <role-view-header
+            [role]="role"
+            [canEdit]="canEdit(role, panel)"
+            (edit)="editIdx.set($event)"
+          />
         }
       </mat-expansion-panel-header>
       @if (editIdx() === role.id) {
         <create-role [roles]="roles()" [initialRole]="role" (cancel)="editIdx.set(0)" />
       } @else {
-        <role-view [permissions]="role.permissions" />
+        <role-view
+          [canEdit]="canEdit(role, panel)"
+          [roleId]="role.id"
+          [permissions]="role.permissions"
+        />
       }
     </mat-expansion-panel>
   }
